WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268772
AX: Announcements of percentage loaded do not honor VoiceOver preference of "play tone for web page loading."
https://bugs.webkit.org/show_bug.cgi?id=268772
Summary
AX: Announcements of percentage loaded do not honor VoiceOver preference of "...
Andres Gonzalez
Reported
2024-02-05 12:23:07 PST
.
Attachments
Patch
(1.66 KB, patch)
2024-02-05 12:58 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-05 12:23:19 PST
<
rdar://problem/122330011
>
Andres Gonzalez
Comment 2
2024-02-05 12:25:18 PST
rdar://121874043
Radar WebKit Bug Importer
Comment 3
2024-02-05 12:25:29 PST
<
rdar://problem/122330092
>
Andres Gonzalez
Comment 4
2024-02-05 12:30:04 PST
rdar://121874043
Andres Gonzalez
Comment 5
2024-02-05 12:58:24 PST
Created
attachment 469730
[details]
Patch
EWS
Comment 6
2024-02-05 19:37:28 PST
Committed
274126@main
(ffb3f7edd603): <
https://commits.webkit.org/274126@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469730
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug