AX: Announcements of percentage loaded do not honor VoiceOver preference of "play tone for web page loading." https://bugs.webkit.org/show_bug.cgi?id=268772 rdar://121874043

Reviewed by Chris Fleizach.

AXObjectCache::announce causes VoiceOver to output a spoken message regardless of the user preference to announce percentage of page loaded. This patch removes this direct announcement. In a follow up patch, we will notify VoiceOver of page processing progress with a custom notification that VoiceOver will handle according to user preferences.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::reportCreationProgress):

Canonical link: https://commits.webkit.org/274126@main